# Saffron

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  settings.html  src-files.js
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/saffron-cli/: Cargo.toml
crates/saffron-cli/src/: cli.rs  handlers.rs  history.rs  lib.rs  output.rs  storage.rs
crates/saffron-core/: Cargo.toml
crates/saffron-core/src/: domain.rs
crates/saffron-core/src/domain/: collection.rs  environment.rs  request.rs  request_body.rs  response.rs
crates/saffron-core/tests/: collection_tests.rs  environment_tests.rs  request_tests.rs  response_tests.rs
crates/saffron-data/: Cargo.toml
crates/saffron-data/src/: error.rs  json.rs  lib.rs  parse.rs  token_stream.rs  tokenizer.rs
crates/saffron-data/src/importers/: insomnia.rs  mod.rs
crates/saffron-data/tests/: json_tests.rs
crates/saffron-http/: Cargo.toml  README.md
crates/saffron-http/examples/: advanced_usage.rs
crates/saffron-http/src/: lib.rs
crates/saffron-http/tests/: http_client_tests.rs
crates/saffron-ui/: Cargo.toml
crates/saffron-utils/: Cargo.toml
crates/saffron-utils/src/: lib.rs  read_file_whitout_bom.rs
docs/: CONTRIBUTING.md  FAQ.md  architecture.md  cli-reference.md  examples.md  getting-started.md  import-implementation.md
saffron/: Cargo.toml  all.html  export.json  fn.main.html  index.html
saffron/src/: main.rs
saffron_cli/: all.html  index.html  sidebar-items.js
saffron_cli/cli/: enum.CollectionAction.html  enum.Commands.html  enum.EnvAction.html  enum.HistoryAction.html  index.html  sidebar-items.js  struct.Cli.html
saffron_cli/handlers/: fn.handle_collection.html  fn.handle_env.html  fn.handle_history.html  fn.handle_send.html  index.html  sidebar-items.js
saffron_cli/history/: index.html  sidebar-items.js  struct.HistoryEntry.html  struct.HistoryRequest.html  struct.HistoryResponse.html
saffron_cli/output/: fn.print_error.html  fn.print_info.html  fn.print_response.html  fn.print_success.html  index.html  sidebar-items.js
saffron_cli/storage/: index.html  struct.Storage.html
saffron_core/: all.html  index.html  sidebar-items.js
saffron_core/domain/: index.html  sidebar-items.js
saffron_core/domain/collection/: index.html  sidebar-items.js  struct.Collection.html  struct.Folder.html  struct.SavedRequest.html  struct.SerializableRequest.html
saffron_core/domain/environment/: index.html  sidebar-items.js  struct.Environment.html  struct.EnvironmentSet.html
saffron_core/domain/request/: enum.FormDataContent.html  enum.HttpMethod.html  enum.RequestBody.html  index.html  sidebar-items.js  struct.FormDataPart.html  struct.HttpHeader.html  struct.HttpRequest.html
saffron_core/domain/request_body/: enum.ContentType.html  fn.encode_form_urlencoded.html  index.html  sidebar-items.js
saffron_core/domain/response/: index.html  struct.HttpResponse.html
saffron_data/: all.html  index.html  sidebar-items.js
saffron_data/error/: index.html  struct.ParseError.html
saffron_data/importers/: enum.ImportError.html  fn.auto_import.html  index.html  sidebar-items.js  struct.ImportedCollection.html  struct.ImportedRequest.html  trait.ImportFormat.html  type.ImportResult.html
saffron_data/importers/insomnia/: enum.InsomniaResourceType.html  index.html  sidebar-items.js  struct.InsomniaExport.html  struct.InsomniaImporter.html  struct.InsomniaResource.html
saffron_data/json/: enum.JsonElement.html  index.html  sidebar-items.js  struct.Json.html
saffron_data/parse/: index.html  sidebar-items.js  trait.Parse.html
saffron_http/: all.html  enum.HttpError.html  index.html  sidebar-items.js  struct.HttpClient.html  struct.HttpClientConfig.html
saffron_http/helpers/: fn.download_file.html  fn.measure_request_time.html  fn.upload_file.html  index.html  sidebar-items.js
saffron_ui/: all.html  index.html
saffron_utils/: all.html  index.html  sidebar-items.js
saffron_utils/read_file_whitout_bom/: fn.read_file_without_bom.html  index.html  sidebar-items.js
search.index/: 00b79a455aec.js  013c1d4318ef.js  03108863a2aa.js  0328b6c6fcee.js  03d88f8393ac.js  0445d333635e.js  044e5470b3c0.js  04b3b18d69d4.js  065d9058fd95.js  06a423ddd172.js  0710594977ab.js  075c2017f88a.js  07a3f0b6cd25.js  07ebd31d9c26.js  08ad0be7579b.js  0b4e174d46aa.js  0b8eea8e73b6.js  0d45d4ebf4f7.js  0db1df4a7518.js  0f05016f0028.js  0f96f1ac5ebb.js  10c790f8420d.js  117d0b3280e1.js  12e5f8c6ccb8.js  134edc826ff0.js  1477e19883e3.js  152dcf471769.js  15cc636e4fe0.js  1621fe062ce2.js  16ed51f1d9e1.js  1772d63db26d.js  17e3c2e29f6a.js  181c26c2c208.js  1e2f689ac813.js  1e489162f1e9.js  1e4c7bb14c49.js  1e9c95975eb2.js  1f0352c0c660.js  20c36df3757e.js  217425bab25c.js  (+112 more)
search.index/crateNames/: 8c4e6b7cada3.js
search.index/desc/: c633df1ed6b4.js
search.index/entry/: 3d63abf613d1.js  79f36dae413b.js  8b0b85636c09.js
search.index/function/: 286d42ccc784.js  2e197004e4c8.js  4063696133f1.js
search.index/generic_inverted_index/: b918cda9bf4e.js  c715bae2421a.js  fb8bcb9ee6c1.js
search.index/name/: 42b53d7fd379.js  5c78046f31e7.js  e5666ba9a878.js
search.index/normalizedName/: 83e1827a45a9.js  871d765ec8dd.js  946fded659d7.js
search.index/path/: 2958f236222f.js  3c8e68f86094.js
search.index/type/: 679566ee627a.js  9b1d434f0b96.js  b296fb17b9b9.js
src/saffron/: main.rs.html
src/saffron_cli/: cli.rs.html  handlers.rs.html  history.rs.html  lib.rs.html  output.rs.html  storage.rs.html
src/saffron_core/: domain.rs.html  lib.rs.html
src/saffron_core/domain/: collection.rs.html  environment.rs.html  request.rs.html  request_body.rs.html  response.rs.html
src/saffron_data/: error.rs.html  json.rs.html  lib.rs.html  parse.rs.html  token_stream.rs.html  tokenizer.rs.html
src/saffron_data/importers/: insomnia.rs.html  mod.rs.html
src/saffron_http/: lib.rs.html
src/saffron_ui/: lib.rs.html
src/saffron_utils/: lib.rs.html  read_file_whitout_bom.rs.html
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  (+2 more)
(+21 files in other folders)
