[package]
name = "saffron"
version = "0.1.0"
edition = "2024"
authors = ["Vitor Henrique Silva <vitorhenriquesilvadesa@gmail.com>"]
description = "A fast, lightweight command-line HTTP client for testing and debugging APIs"
readme = "../README.md"
repository = "https://github.com/Vitorhenriquesilvadesa/Saffron"
license = "MIT"
keywords = ["http", "cli", "api", "rest", "client"]
categories = [
    "command-line-utilities",
    "network-programming",
    "development-tools",
]

[dependencies]
saffron-data = { version = "0.1.0", path = "../crates/saffron-data" }
saffron-core = { version = "0.1.0", path = "../crates/saffron-core" }
saffron-http = { version = "0.1.0", path = "../crates/saffron-http" }
saffron-cli = { version = "0.1.0", path = "../crates/saffron-cli" }
clap = { version = "4.5", features = ["derive"] }
