[package]
name = "saffron-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
saffron-core = { path = "../saffron-core" }
saffron-http = { path = "../saffron-http" }
saffron-data = { path = "../saffron-data" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
