[package]
name = "saffron-cli"
version = "0.1.0"
edition = "2024"
authors = ["Vitor Henrique Silva <your.email@example.com>"]
description = "CLI interface for Saffron HTTP client"
repository = "https://github.com/Vitorhenriquesilvadesa/Saffron"
license = "MIT"
keywords = ["http", "cli", "api"]
categories = ["command-line-utilities"]

[dependencies]
saffron-core = { version = "0.1.0", path = "../saffron-core" }
saffron-http = { version = "0.1.0", path = "../saffron-http" }
saffron-data = { version = "0.1.0", path = "../saffron-data" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
