[package]
name = "saffron-core"
version = "0.1.0"
edition = "2024"
authors = ["Vitor Henrique Silva <vitorhenriquesilvadesa@gmail.com>"]
description = "Core domain models for Saffron HTTP client"
repository = "https://github.com/Vitorhenriquesilvadesa/Saffron"
license = "MIT"
keywords = ["http", "domain", "models"]
categories = ["network-programming"]

[dependencies]
saffron-data = { version = "0.1.0", path = "../saffron-data" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
