[package]
name = "saffron-http"
version = "0.1.1"
edition = "2024"
authors = ["Vitor Henrique Silva <vitorhenriquesilvadesa@gmail.com>"]
description = "HTTP client implementation for Saffron"
repository = "https://github.com/Vitorhenriquesilvadesa/Saffron"
license = "MIT"
keywords = ["http", "client", "ureq"]
categories = ["network-programming"]

[dependencies]
saffron-core = { version = "0.1.0", path = "../saffron-core" }
ureq = { version = "2.10", features = ["json"] }
thiserror = "2.0"
chrono = "0.4"
