[package]
name = "saffron-utils"
version = "0.1.0"
edition = "2024"
authors = ["Vitor Henrique Silva <your.email@example.com>"]
description = "Utility functions for Saffron HTTP client"
repository = "https://github.com/Vitorhenriquesilvadesa/Saffron"
license = "MIT"
keywords = ["utilities", "helpers"]
categories = ["development-tools"]

[dependencies]
